<?xml version="1.0"?>
<package format="2">
  <name>navsat-visualizer</name>
  <version>0.1.1</version>
  <description>The navsat-visualizer package</description>

  <maintainer email="zibaeiahmadreza@gmail.com">Ahmadreza Zibaei</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
